Removed defunct java switches